celery_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-deployment
  labels:
    app: celery-app
spec:
  selector:
    matchLabels:
      app: celery-app
  template:
    metadata:
      labels:
        app: celery-app
    spec:
      containers:
      - name: celery-app
        image: gcr.io/fifth-incentive-409919/celery_app:v1
        ports:
        - containerPort: 5000
#        resources:
#          requests:de
#            memory: "64Mi"  # Set the memory request
#            cpu: "250m"     # Set the CPU request
#          limits:
#            memory: "128Mi" # Set the memory limit
#            cpu: "500m"     # Set the CPU limit
