flask_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  labels:
    app: flask-app
spec:
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: gcr.io/fifth-incentive-409919/flask-app-release:flask-app-1.0.2
        ports:
        - containerPort: 5000
#        resources:
#          requests:de
#            memory: "64Mi"  # Set the memory request
#            cpu: "250m"     # Set the CPU request
#          limits:
#            memory: "128Mi" # Set the memory limit
#            cpu: "500m"     # Set the CPU limit
