ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nginx-ingress
 annotations:
   kubernetes.io/ingress.global-static-ip-name: "static-ip"

spec:
 rules:
 - host: devdock.work.gd
 - http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: nginx-service
           port:
             number: 80
